# runner-prototype

./: .eslintrc.js  .gitignore  .gitmodules  .lintstagedrc  .mergify.yml  .travis.yml  ARCHITECTURE.md  README.md  greenkeeper.json  index.html  install.sh  main.js  package.json  test.sh
backend/: .babelrc  Server.js  ServerMuddle.js  bundler.js  index.js  lib.js  package.json
backend/Controllers/: NetworkController.js  ServerNetworkController.js
backend/Registries/: ClientsRegistries.js
backend/Systems/: ServerNetworkMessageSystem.js
backend/Utils/: ServerNetworkUtils.js
common/: Constants.js  Engine.js  EngineConfig.js  Muddle.js  Paper.js  index.js  package-lock.json  package.json
common/Actions/: CorrectPlayerPositionAction.js  DespawnClientPlayerAction.js  DespawnClientPlayersAction.js  DespawnPlayerAction.js  PlayerSetMovingAction.js  RemoveBuildableObjectAction.js  SaveBuildableObjectAction.js  SpawnPlayerAction.js
common/Controllers/: ActionController.js
common/Interfaces/: ActionInterface.js  ActionProcessorInterface.js  BroadcastedActionInterface.js  CopyableInterface.js  HashableIdInterface.js  JsonSerializableInterface.js  (+7 more)
frontend/: .babelrc  .env.example  .uglifyrc  ClientMuddle.js  StoreMuddle.js  VuexStore.js  babel.config.js  index.html  index.js  package.json
game/: BuilderController.js  Game.js  Player.js  Renderer.js  Sandbox.js  Scene.js  SceneBuildableObjectManager.js  SceneObjectManager.js
gui/: App.vue
rust_common/: Cargo.toml
rust_common/src/: lib.rs  muddle_helpers.rs  muddle_types.rs  utils.rs  world.rs
(+120 files in other folders)
