[package]
name = "rust_common"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.2.0"
nalgebra = "0.16.12"
ncollide2d = "0.17.3"
nphysics2d = { version = "0.9", default-features = false, features = [ "use-wasm-bindgen" ] }
once_cell = "0.1.6"
wasm-bindgen = "0.2"
js-sys = "0.3.5"
